Ajout de la PAGE : VIVRE ICI! + tous les éléments + Ajout de tous les liens du header + Ajout d'images pour essaie pour la résolution

--- a/municipalite.html
+++ b/municipalite.html
@@ -14,52 +14,50 @@
 </head>
 
 <body>
-    <header class="municipalite">
+    <header>
         <div class="border-bottom">
             <div class="header-bg">
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-center pt-3 ">
-                    <a href="/"
+                    <a href="acceuil.html"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                         <img class="navbar-brand " src="Daveluyville-Images/logo-villedavel.png" alt="logo de la ville">
                     </a>
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="#" class="nav-link text-white">
-                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2" width="24" height="24"
+                            <a href="loisirs.html" class="nav-link text-white ">
+                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                     aria-hidden="true">
-                                    <use xlink:href="#home"></use>
-                                </i>
-                                Socioculturelle
-                            </a>
+                                </i>Socioculturelle</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white">
-                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2" width="24" height="24"
+                            <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis"
+                                class="nav-link text-white">
+                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                     aria-hidden="true">
-                                    <use xlink:href="#home"></use>
+
                                 </i>
                                 Citoyens
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white">
-                                <i class="bi bi-bank bi d-block mx-auto mb-1 fs-2" width="24" height="24"
+                            <a href="municipalite.html" class="nav-link text-white">
+                                <i class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
                                     aria-hidden="true">
-                                    <use xlink:href="#home"></use>
+                                    <use xlink:href="municipalite.html"></use>
                                 </i>
                                 Municipalité
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white">
-                                <i class="bi bi-graph-up-arrow bi d-block mx-auto mb-1 fs-2" width="24" height="24"
+                            <a href="https://www.ville.daveluyville.qc.ca/contact" class="nav-link text-white">
+                                <i class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-center" width="24" height="24"
                                     aria-hidden="true">
-                                    <use xlink:href="#home"></use>
-                                </i>Entreprises</a>
+
+                                </i>Nous joindre</a>
                         </li>
                         <div class="d-flex align-items-center gap-2 ms-3 p-4">
                             <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
-                                <input type="search" class="form-control" placeholder="Que cherhcez-vous ?"
+                                <input type="search" class="form-control" placeholder="Que cherchez-vous ?"
                                     aria-label="Search" />
                             </form>
                             <button type="button" class="btn btn-primary">Chercher</button>
@@ -70,15 +68,14 @@
         </div>
         <div class="nav-scroller py-1 mb-3 border-bottom">
             <nav class="container container nav nav-underline justify-content-between">
-                <a class="nav-item nav-link link-body-emphasis" href="#">Centre Piché</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Écoles - CSBF</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">CPE - Garderie</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Les parcs</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Bibliothèque</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Bottin des entreprises</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Carrefour des générations</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Évènements</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Journal Le causeur</a>
+                <a class="nav-item nav-link link-body-emphasis" href="vivreici.html">Vivre ici !</a>
+                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/avis-publics">Avis Public</a>
+
+                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Scéance du conseil</a>
+                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Règlements et permis</a>
+
+                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/parc-industriel">Entreprises</a>
+                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/le-causeur-en-ligne"> Journal Le causeur</a>
             </nav>
         </div>
 
@@ -250,7 +247,7 @@
                             </button>
                         </a>
                         <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-                       Interprétation du Logo de la ville
+                            Interprétation du Logo de la ville
                         </button>
                     </div>
                 </div>
@@ -260,26 +257,27 @@
                 </div>
             </div>
         </div>
-
-
-
     </main>
+
+
     <footer class="py-4">
         <div class="row m-4">
             <div class="col-6 col-md-2 mb-3">
 
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Loisirs</a>
+                        <a href="loisirs.html" class="nav-link p-0 text-body-secondary">Loisirs</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Citoyens</a>
+                        <a href="https://www.ville.daveluyville.qc.ca/aide-a-l-emploi-et-demarrage-d-entreprise"
+                            class="nav-link p-0 text-body-secondary">Citoyens</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Municipalités</a>
+                        <a href="municipalite.html" class="nav-link p-0 text-body-secondary">Municipalités</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Entreprises</a>
+                        <a href="https://www.ville.daveluyville.qc.ca/aide-a-l-emploi-et-demarrage-d-entreprise"
+                            class="nav-link p-0 text-body-secondary">Économies</a>
                     </li>
                 </ul>
             </div>
@@ -287,16 +285,20 @@
 
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Application GESTRIO</a>
+                        <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://www.ville.daveluyville.qc.ca/medias/doc/calendrier-daveluyville-web.pdf"
+                            class="nav-link p-0 text-body-secondary">Calendrier 2025</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Programme vidange fosses septiques</a>
+                        <a href="https://www.ville.daveluyville.qc.ca/programme-de-vidange-de-fosses-septiques"
+                            class="nav-link p-0 text-body-secondary">Programme vidange fosses septiques</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Avis public</a>
+                        <a href="https://www.ville.daveluyville.qc.ca/avis-publics"
+                            class="nav-link p-0 text-body-secondary">Avis public</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Offre d'emplois</a>
+                        <a href="https://www.ville.daveluyville.qc.ca/articles/ouverture-de-poste-tresoriertresoriere"
+                            class="nav-link p-0 text-body-secondary">Offre d'emplois</a>
                     </li>
                     <li class="nav-item mb-2">
                         <a href="#" class="nav-link p-0 text-body-secondary">Histoire de la ville</a>
@@ -305,24 +307,22 @@
             </div>
 
             <div class="col-md-5 offset-md-1 mb-3">
-                <ul class="nav flex-row">
-                    <li class="nav-item mb-2">
+                <div class="d-flex align-items-center gap-3 justify-content-start footer-logos">
+                    <a href="http://">
                         <img src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
-                    </li>
-                    <li class="nav-item  ms-5">
+                    </a>
+                    <a href="http://">
                         <img src="Daveluyville-Images/victoetsaregion.png" alt="accès Victo et sa région">
-                    </li>
-                    <li class="nav-item  ms-5">
-                        <a href="https://daveluyville.appvoila.com/fr/">
-                            <img src="Daveluyville-Images/logo-voila-davel.png" alt="accès Portail Voilà"></a>
-                    </li>
-                </ul>
+                    </a>
 
+                    <a href="https://daveluyville.appvoila.com/fr/">
+                        <img src="Daveluyville-Images/logo-voila-davel.png" alt="accès Portail Voilà"></a>
+                </div>
             </div>
         </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
             <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
-          
+
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -331,6 +331,7 @@
             integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
             crossorigin="anonymous"></script>
     </footer>
+
 
 </body>
 
