Ajout section à venir dans la page accueil + ajustement section actualités

--- a/acceuil.html
+++ b/acceuil.html
@@ -25,15 +25,15 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
                             <a href="loisirs.html" class="nav-link text-white ">
-                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                    aria-hidden="true">
+                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24"
+                                    height="24" aria-hidden="true">
                                 </i>Socioculturelle</a>
                         </li>
                         <li>
                             <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis"
                                 class="nav-link text-white">
-                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                    aria-hidden="true">
+                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24"
+                                    height="24" aria-hidden="true">
 
                                 </i>
                                 Citoyens
@@ -69,13 +69,18 @@
         <div class="nav-scroller py-1 mb-3 border-bottom">
             <nav class="container container nav nav-underline justify-content-between">
                 <a class="nav-item nav-link link-body-emphasis" href="vivreici.html">Vivre ici !</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/avis-publics">Avis Public</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/avis-publics">Avis Public</a>
 
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Scéance du conseil</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Règlements et permis</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Scéance du conseil</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Règlements et permis</a>
 
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/parc-industriel">Entreprises</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/le-causeur-en-ligne"> Journal Le causeur</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/parc-industriel">Entreprises</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/le-causeur-en-ligne"> Journal Le causeur</a>
             </nav>
         </div>
 
@@ -165,36 +170,164 @@
         </div>
 
 
-        <!-- START THE FEATURETTES -->
+        <!-- Actualités -->
+        <div class="container">
+            <div class=" row featurette">
+                <div class="col-md-7 order-md-2">
+                    <h3 class=" display-3 fst-italic mt-4lh-1 text-center">
+                        Actualités
+                        <span class="text-body-secondary">Décembre 2025</span>
+                    </h3>
+                    <p class="lead text-center">
+                        La ville souhaite un joyeux temps des fêtes à tous les citoyens </p>
+                </div>
+                <!--Calendrier Canva -->
+                
+                <div class="col-md-5 order-md-1 p-3">
+                    <div style="position: relative; width: 100%; height: 0; padding-top: 85.0000%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+                        <iframe loading="lazy"
+                            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                            src="https://www.canva.com/design/DAG7Xr9mJtY/dr754-HAIvjl7LzVvZezIg/view?embed"
+                            allowfullscreen="allowfullscreen" allow="fullscreen">
+                        </iframe>
 
+                        <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG7Xr9mJtY&#x2F;dr754-HAIvjl7LzVvZezIg&#x2F;view?utm_content=DAG7Xr9mJtY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+                            target="_blank" rel="noopener">CALENDRIER2025</a> par EG GE
 
-
-
-        <div class="row featurette">
-            <div class="col-md-7 order-md-2">
-                <h3 class=" display-3 fst-italic mt-4lh-1 text-center">
-                    Actualités
-                    <span class="text-body-secondary">Décembre 2025</span>
-                </h3>
-                <p class="lead text-center">
-                    La ville souhaite un joyeux temps des fêtes à tous les citoyens </p>
-            </div>
-            <div class="col-md-5 order-md-1 p-3">
-                <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
-                            padding-bottom: 0; box-shadow: 0 2px 0px 0 rgba(63,69,81,0.16);
-                            border-radius: 8px; will-change: transform;">
-                    <iframe loading="lazy"
-                        style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin:0 ;"
-                        src="https://www.canva.com/design/DAG5irp-8QY/lJ8htT4KNPtA4lP9TzqpaA/watch?embed"
-                        allowfullscreen="allowfullscreen" allow="fullscreen">
-                        <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG5irp-8QY&#x2F;lJ8htT4KNPtA4lP9TzqpaA&#x2F;watch?utm_content=DAG5irp-8QY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
-                            target="_blank" rel="noopener">Calendrier Daveluyville</a> par EG GE
-                    </iframe>
-
+                    </div>
                 </div>
             </div>
+            <!-- Fin Calendrier Canva -->
         </div>
 
+        <!-- Fin actualités -->
+
+        <!-- Section À venir-->
+        <div class="container">
+            <h3 class="pb-2 border-bottom display-3">À venir</h3>
+            <!-- Section facebook-->
+            <div>
+                <iframe
+                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ffetedavel%2Fposts%2Fpfbid0Aa9AVQrnVxqBBEAUZdJXQkMVLDEGmWswm1t6Quv7Xg3Y92qPfZbtEgZK4a2HULjrl&show_text=true&width=500"
+                    width="300" height="374" style="border:none" scrolling="no" frameborder="0" allowfullscreen="true"
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <iframe
+                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ffetedavel%2Fposts%2Fpfbid0vWZRfuEoqpLf8xNhLXVjCq89sZqYxF97MYReAFNJRh9kqXfBdQ8XScKyX8VvoFjMl&show_text=true&width=500"
+                    width="300" height="374" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowfullscreen="true"
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <iframe
+                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCentreSportifPiche%2Fposts%2Fpfbid02GrFHHtFEFdyKuZBpzNUWWokq6hDVKrris6froNcJFd7nn62N2gNmvXrsWXtdDv92l&show_text=true&width=500"
+                    width="300" height="374" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowfullscreen="true"
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <iframe
+                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCentreSportifPiche%2Fposts%2Fpfbid02z5WdBVvTqKPVo4ARctdPdGRBtDLHnbw31n52eV8GQyZbgfT6b6xiN2kFGGHg4K1bl&show_text=true&width=500"
+                    width="300" height="374" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowfullscreen="true"
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </div>
+
+            <!-- Section FENÊTRE BOOTSTRAP-->
+            <div class="b-example-divider">
+                <div class="container px-4 py-5" id="custom-cards">
+
+                    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+                                style="background-image: url(&quot;unsplash-photo-1.jpg&quot;)">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                                    <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
+                                        Carnaval d'hiver
+                                    </h3>
+                                    <ul class="d-flex list-unstyled mt-auto">
+                                        <li class="me-auto">
+                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
+                                                height="32" class="rounded-circle border border-white" />
+                                        </li>
+                                        <li class="d-flex align-items-center me-3">
+                                            <svg class="bi me-2" width="1em" height="1em" role="img"
+                                                aria-label="Location">
+                                                <use xlink:href="#geo-fill"></use>
+                                            </svg>
+                                            <small>Earth</small>
+                                        </li>
+                                        <li class="d-flex align-items-center">
+                                            <svg class="bi me-2" width="1em" height="1em" role="img"
+                                                aria-label="Duration">
+                                                <use xlink:href="#calendar3"></use>
+                                            </svg>
+                                            <small>3d</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+                                style="background-image: url(&quot;unsplash-photo-2.jpg&quot;)">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                                    <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
+                                        Much longer title that wraps to multiple lines
+                                    </h3>
+                                    <ul class="d-flex list-unstyled mt-auto">
+                                        <li class="me-auto">
+                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
+                                                height="32" class="rounded-circle border border-white" />
+                                        </li>
+                                        <li class="d-flex align-items-center me-3">
+                                            <svg class="bi me-2" width="1em" height="1em" role="img"
+                                                aria-label="Location">
+                                                <use xlink:href="#geo-fill"></use>
+                                            </svg>
+                                            <small>Pakistan</small>
+                                        </li>
+                                        <li class="d-flex align-items-center">
+                                            <svg class="bi me-2" width="1em" height="1em" role="img"
+                                                aria-label="Duration">
+                                                <use xlink:href="#calendar3"></use>
+                                            </svg>
+                                            <small>4d</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+                                style="background-image: url(&quot;unsplash-photo-3.jpg&quot;)">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                                    <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
+                                        Another longer title belongs here
+                                    </h3>
+                                    <ul class="d-flex list-unstyled mt-auto">
+                                        <li class="me-auto">
+                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
+                                                height="32" class="rounded-circle border border-white" />
+                                        </li>
+                                        <li class="d-flex align-items-center me-3">
+                                            <svg class="bi me-2" width="1em" height="1em" role="img"
+                                                aria-label="Location">
+                                                <use xlink:href="#geo-fill"></use>
+                                            </svg>
+                                            <small>California</small>
+                                        </li>
+                                        <li class="d-flex align-items-center">
+                                            <svg class="bi me-2" width="1em" height="1em" role="img"
+                                                aria-label="Duration">
+                                                <use xlink:href="#calendar3"></use>
+                                            </svg>
+                                            <small>5d</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
     <footer class="py-4">
         <div class="row m-4">
